# backtrack

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  README.md  VERSIONING.md
.cargo/: audit.toml
.github/workflows/: ci.yml
backtrack_plan/: README.md  antislop.md  personality.md  progress.md
backtrack_plan/reference/: backtrack.md  brief.md  health.md  offline-strategy.md  open-questions.md  prototype.md  stack.md
backtrack_plan/stages/: stage-00-bootstrap.md  stage-01-core-index.md  stage-02-borg-adapter.md  stage-03-daemon-dbus-cli.md  stage-04-backup-pipeline.md  stage-05-offline-protection.md  stage-06-gtk-timeline.md  stage-07-restore-engine.md  stage-08-search-compare.md  stage-09-wizard-preferences.md  stage-10-health.md  stage-11-disaster-recovery.md  stage-12-integrations-tray.md  stage-13-packaging-release.md
crates/backtrack-cli/: Cargo.toml
crates/backtrack-cli/src/: main.rs
crates/backtrack-core/: Cargo.toml
crates/backtrack-core/proptest-regressions/index/: writer.txt
crates/backtrack-core/src/: lib.rs  logging.rs
crates/backtrack-core/src/engine/: error.rs  job.rs  mod.rs  spec.rs
crates/backtrack-core/src/engine/borg/: classify.rs  invoke.rs  logjson.rs  mod.rs
crates/backtrack-core/src/index/: item.rs  mod.rs  reader.rs  schema.rs  writer.rs
crates/backtrack-core/src/secret/: file.rs  keyring.rs  mod.rs
crates/backtrack-core/testdata/: small-listing.jsonl
crates/backtrack-core/tests/: borg_engine.rs  borg_repo_lifecycle.rs
crates/backtrack-gtk/: Cargo.toml
crates/backtrack-gtk/src/: main.rs
crates/backtrack-testkit/: Cargo.toml
crates/backtrack-testkit/src/: lib.rs
crates/backtrackd/: Cargo.toml
crates/backtrackd/src/: main.rs
docs/superpowers/plans/: 2026-07-08-stage-02-borg-adapter.md
docs/superpowers/specs/: 2026-07-08-stage-02-borg-adapter-design.md
scripts/: board.py
xtask/: Cargo.toml
xtask/src/: main.rs
