# Development tooling (never published). Hosts `demo-repo`, which seeds the
# dataset every GUI stage develops against.
[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[features]
# Gates the end-to-end test that shells out to a real `borg` (run via
# `just test-integration`).
integration = []

[dependencies]
backtrack-core.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
