[package]
name = "backtrack-cli"
description = "Backtrack CLI: thin client over the daemon's D-Bus interface."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "backtrack"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
backtrack-core.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
