[package]
name = "backtrack-core"
description = "Backtrack core library: borg adapter, index, spool, restore engine, config."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
# Enables tests that shell out to a real `borg` (run via `just test-integration`).
integration = []

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
proptest = "1"
