[package]
name = "backtrackd"
description = "Backtrack daemon: scheduler, D-Bus service, job queue."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
backtrack-core.workspace = true
tokio.workspace = true
tracing.workspace = true
